# PUT-SK2

./: .gitignore  CMakeLists.txt  client  demo  demo.cpp  global.cpp  global.hpp  msqCLI.cpp  msqCLI.hpp  server  server.cpp
.github/workflows/: c-cpp.yml
include/: global.hpp  msqCLI.hpp
src/: demo.cpp  global.cpp  msqCLI.cpp  recv1.cpp  recv2.cpp  send1.cpp  server  server.cpp
